fix(component: table-of-contents): sticky on mobile

--- a/src/components/TableOfContents.module.css
+++ b/src/components/TableOfContents.module.css
@@ -4,8 +4,6 @@
   background-color: var(--neutral-clr-100);
   box-shadow: 0 8px 24px rgba(149, 157, 165, 0.2);
   width: 262px;
-  position: sticky;
-  top: 40px;
 }
 
 .title {
@@ -24,4 +22,11 @@
   display: flex;
   flex-direction: column;
   gap: 6px;
+}
+
+@media (min-width: 1040px) {
+  .aside {
+    position: sticky;
+    top: 40px;
+  }
 }
